Flexbox fixes on Safari iOS 12

--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -21,6 +21,10 @@
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
+.hscrollable > *,
+.vscrollable > * {
+    flex-shrink: 0;
+}
 .hide {
     display: none;
 }
